objects/LLC_BI__Spread_Projections_Driver__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Classification__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <description>This optional lookup field looks up to the Classification object.</description>
        <label>Classification</label>
        <referenceTo>LLC_BI__Classification__c</referenceTo>
        <relationshipLabel>Drivers</relationshipLabel>
        <relationshipName>Spread_Projections_Drivers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Spread_Projections_Template__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <description>This optional lookup field looks up to the Spread Projections Template object.</description>
        <label>Spread Projections Template</label>
        <referenceTo>LLC_BI__Spread_Projections_Template__c</referenceTo>
        <relationshipLabel>Drivers</relationshipLabel>
        <relationshipName>Spread_Projections_Drivers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Spread_Statement_Record_Value__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <description>This optional lookup field looks up to the Spreads Statement Record Value object.</description>
        <label>Spread Statement Record Value</label>
        <referenceTo>LLC_BI__Spread_Statement_Record_Value__c</referenceTo>
        <relationshipLabel>Driver</relationshipLabel>
        <relationshipName>Spread_Projections_Driver</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Spread_Statement_Record__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <description>This optional lookup field looks up to the Spreads Statement Record object and allows administrators to override classifications with spreads statement records.</description>
        <label>Spread Statement Record</label>
        <referenceTo>LLC_BI__Spread_Statement_Record__c</referenceTo>
        <relationshipLabel>Drivers</relationshipLabel>
        <relationshipName>Spread_Projections_Drivers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Type__c</fullName>
        <description>Administrators populate this required picklist field when creating projection templates to define the type of calculations the system performs to project statement values. Users have the ability to edit the Type field once a projection period is created.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dollar Amount Change</fullName>
                </value>
                <value>
                    <fullName>Percent Amount Change</fullName>
                </value>
                <value>
                    <fullName>Percent of Revenue</fullName>
                </value>
                <value>
                    <fullName>No Change</fullName>
                    <default>true</default>
                    <label>No Change</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Value__c</fullName>
        <description>Administrators populate this optional text field in projection templates with values the system uses to perform projection calculations. By default, it is blank.</description>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is required. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Spread Projections Driver</label>
    <nameField>
        <displayFormat>SPD-{000000000}</displayFormat>
        <label>Spread Projections Driver</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Spread Projections Drivers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>